--- a/MyMiniNote/res/layout/attach_detil.xml
+++ b/MyMiniNote/res/layout/attach_detil.xml
@@ -21,14 +21,14 @@
             android:scaleType="fitCenter"
             android:visibility="gone" />
 
-        <ImageView
+        <!-- <ImageView
             android:id="@+id/iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:scaleType="center"
             android:src="@drawable/icon_photo_big"
-            android:visibility="visible" />
+            android:visibility="visible" /> -->
         <!--
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
