照相机功能重构 采用options解决压缩照片是带来的内存溢出问题

--- a/MyMiniNote/res/layout/attach_detil.xml
+++ b/MyMiniNote/res/layout/attach_detil.xml
@@ -18,8 +18,7 @@
             android:id="@+id/scrolliv"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:scaleType="fitCenter"
-            android:visibility="gone" />
+            android:scaleType="fitCenter"/>
 
         <!-- <ImageView
             android:id="@+id/iv"
