--- a/MyMiniNote/res/layout/main.xml
+++ b/MyMiniNote/res/layout/main.xml
@@ -5,7 +5,6 @@
     android:orientation="horizontal" >
 
     <LinearLayout
-        android:id="@+id/opennote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -14,23 +13,22 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/newimg"
+            android:id="@+id/opennote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="true"
             android:clickable="true"
             android:src="@drawable/new_btn_selector" />
 
-        <TextView
+       <!--  <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:text="新建笔记"
-            android:textSize="18sp" />
+            android:textSize="18sp" /> -->
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/checknote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -38,19 +36,19 @@
         android:gravity="center"
         android:orientation="vertical" >
         <ImageView
-            android:id="@+id/openimg"
+            android:id="@+id/checknote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="true"
             android:clickable="true"
             android:src="@drawable/open_btn_selector" />
 
-        <TextView
+        <!-- <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:text="查看笔记"
-            android:textSize="18sp" />
+            android:textSize="18sp" /> -->
     </LinearLayout>
 
 </LinearLayout>
