主界面修改 手势模块去掉dialoginterface

--- a/MyMiniNote/res/layout/main.xml
+++ b/MyMiniNote/res/layout/main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:esp="http://schemas.android.com/apk/res/com.zj.note.widget"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
+    <!--
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -20,12 +22,12 @@
             android:clickable="true"
             android:src="@drawable/new_btn_selector" />
 
-       <!--  <TextView
+        <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:text="新建笔记"
-            android:textSize="18sp" /> -->
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -43,12 +45,43 @@
             android:clickable="true"
             android:src="@drawable/open_btn_selector" />
 
-        <!-- <TextView
+        <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:text="查看笔记"
-            android:textSize="18sp" /> -->
+            android:textSize="18sp" />
     </LinearLayout>
 
+    -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="9"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/newnote"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="新建笔记" />
+
+        <TextView
+            android:id="@+id/checknote"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="查看笔记" />
+    </LinearLayout>
+
+    <com.zj.note.widget.MyViewFlipper
+        android:id="@+id/vf"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" />
+   
 </LinearLayout>
