--- a/MyMiniNote/res/layout/mainnote.xml
+++ b/MyMiniNote/res/layout/mainnote.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:gravity="center_vertical|left"
+            android:background="@drawable/n_input_selector"
             android:hint="请输入笔记标题" />
 
         <EditText
@@ -25,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="15"
             android:gravity="left"
+            android:background="@drawable/n_input_selector"
             android:hint="请输入笔记内容"
             android:singleLine="false" />
     </LinearLayout>
